--- a/captcha_racer/templates/timer_game.html
+++ b/captcha_racer/templates/timer_game.html
@@ -39,7 +39,7 @@
             <div id="game-over-popup">
                 <h2>Game Over!</h2>
                 <p>Your final score: <span id="final-score">{{ session['score'] }}</span></p>
-                <button onclick="restartGame()">Play Again</button>
+                <button class="button" onclick="restartGame()">Play Again</button>
             </div>
         </div>
     </main>
