--- a/captcha_racer/static/styles.css
+++ b/captcha_racer/static/styles.css
@@ -223,14 +223,17 @@ form input {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     z-index: 1000;
+    width: 15rem;
+    height: 15rem;
+    align-items: center;
 }
-#game-over-popup button {
+/* #game-over-popup button {
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #4CAF50;
@@ -241,4 +244,4 @@ form input {
 }
 #game-over-popup button:hover {
     background-color: #45a049;
-}
+} */
