--- a/captcha_racer/templates/solo.html
+++ b/captcha_racer/templates/solo.html
@@ -12,7 +12,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/multiplayer">Multiplayer</a></li>
+                <li><a href="/solo">Solo Mode</a></li>
+                <!-- <li><a href="/multiplayer">Multiplayer</a></li> -->
+                <li><a href="/vs-ai">Versus AI</a></li>
             </ul>
         </nav>
     </header>
