--- a/captcha_racer/templates/timer.html
+++ b/captcha_racer/templates/timer.html
@@ -13,6 +13,8 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/solo">Solo Mode</a></li>
+                <!-- <li><a href="/multiplayer">Multiplayer</a></li> -->
+                <li><a href="/vs-ai">Versus AI</a></li>
             </ul>
         </nav>
     </header>
