--- a/captcha_racer/templates/race_the_clock.html
+++ b/captcha_racer/templates/race_the_clock.html
@@ -27,7 +27,7 @@
             <p>Score: <span id="score">{{ session['score'] }}</span></p>
             
             <div>
-                <img id="captcha-image" src="{{ url_for('captcha') }}" alt="Captcha Image" />
+                <img id="captcha-image" src="{{ url_for('captcha_solo') }}" alt="Captcha Image" />
             </div>
 
             <form id="captcha-form">
