--- a/captcha_racer/templates/survival_game.html
+++ b/captcha_racer/templates/survival_game.html
@@ -38,7 +38,7 @@
 
             <p>PROVE YOU ARE A FUCKING HUMAN OKAY?</p>
             <div>
-                <img id="captcha-image" src="{{ url_for('captcha') }}" alt="Captcha Image" />
+                <img id="captcha-image" src="{{ url_for('captcha_solo') }}" alt="Captcha Image" />
             </div>
             
             <form id="captcha-form">
